--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -1,33 +1,37 @@
 <div class="header-create-nc">
-    <div class="p-0">
-        <div class="d-flex">
-            <button routerLink="/ncs/about/{{id}}" type="button" class="btn btn-dark">
-                <i class="pi pi-home"></i>
-                Voltar Para Nc
-            </button>
-            <div class="text-box">
-                <p>Avaliação SGQ</p>
-                <p-chip class="ml-2">
-                    <i class="bi bi-ticket-perforated mr-2"></i>
-                    {{this.sgqServ.nc?.code}}
-                </p-chip>
-            </div>
-        </div>
+  <div class="p-0">
+    <div class="d-flex">
+      <button
+        routerLink="/ncs/about/{{ id }}"
+        type="button"
+        class="btn btn-dark"
+      >
+        <i class="pi pi-home"></i>
+        {{ "about.backToNC" | translate }}
+      </button>
+      <div class="text-box">
+        <p>{{ "about.sgqEval" | translate }}</p>
+        <p-chip class="ml-2">
+          <i class="bi bi-ticket-perforated mr-2"></i>
+          {{ this.sgqServ.nc?.code }}
+        </p-chip>
+      </div>
     </div>
-    <div class="d-flex justify-content-end p-0">
-        <div class="d-flex buttons">
-            <button type="button" class="btn btn-outline-dark mr-2">
-                Cancelar
-                <i class="pi pi-times"></i>
-            </button>
-            <button type="button" class="btn btn-dark mr-2" disabled>
-                Dados da NC
-                <i class="bi bi-file-earmark-medical"></i>
-            </button>
-            <button type="button" class="btn btn-dark mr-2" (click)="salvarSGQ()">
-                Salvar
-                <i class="pi pi-save"></i>
-            </button>
-        </div>
+  </div>
+  <div class="d-flex justify-content-end p-0">
+    <div class="d-flex buttons">
+      <button type="button" class="btn btn-outline-dark mr-2">
+        {{ "global.cancel" | translate }}
+        <i class="pi pi-times"></i>
+      </button>
+      <button type="button" class="btn btn-dark mr-2" disabled>
+        {{ "global.ncData" | translate }}
+        <i class="bi bi-file-earmark-medical"></i>
+      </button>
+      <button type="button" class="btn btn-dark mr-2" (click)="salvarSGQ()">
+        {{ "global.save" | translate }}
+        <i class="pi pi-save"></i>
+      </button>
     </div>
+  </div>
 </div>
