--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -1,21 +1,21 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Relato e Evidências da Solução do Problema *</h1>
-    <p>
-        Comente sobre o processo e anexe evidências da solução do problema desta NC
-    </p>
+  <h1 class="mr-3">Relato e Evidências da Solução do Problema *</h1>
+  <p>
+    Comente sobre o processo e anexe evidências da solução do problema desta NC
+  </p>
 </div>
 
 <div class="d-flex flex-row flex-wrap justify-content-between mt-4">
-    <div class="">
-        <p-editor
-                [style]="{ height: '210px', width: '700px', 'font-size': '25px' }"
-                [(ngModel)]="sgqServ.sgq.text_area1"
-                [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
-        ></p-editor>
-        <div id="counterEv" class="text-end">0</div>
-    </div>
+  <div class="">
+    <p-editor
+      [style]="{ height: '210px', width: '700px', 'font-size': '25px' }"
+      [(ngModel)]="sgqServ.sgq.text_area1"
+      [modules]="{ counter: { container: '#counterEv', unit: 'character' } }"
+    ></p-editor>
+    <div id="counterEv" class="text-end">0</div>
+  </div>
 
-    <!--<div class="div-attachment">
+  <!--<div class="div-attachment">
         <h1>Anexar evidência da solução do problema</h1>
         <div
                 class="white-background"
@@ -50,37 +50,30 @@
             </p>
         </div>
     </div>-->
-    <div class="div-attachment">
-        <h1>Envie seus documentos</h1>
-        <div
-                class="white-background"
-                *ngIf="sgqServ.sgq.attachments.length == 0"
-        >
-            <input
-                    type="file"
-                    class="input-attachment"
-                    (change)="onUpload($event)"
-                    multiple
-            />
-            <i class="pi pi-cloud-upload"></i>
-            <p>
-                Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
-            </p>
-        </div>
-        <div
-                class="white-background-files"
-                *ngIf="sgqServ.sgq.attachments.length != 0"
-        >
-            <button
-                    type="button"
-                    (click)="clearFiles()"
-                    class="btn btn-light"
-            >
-                <i class="pi pi-replay"></i>
-            </button>
-            <p *ngFor="let files of sgqServ.sgq.attachments">
-                {{ files.name }}
-            </p>
-        </div>
+  <div class="div-attachment">
+    <h1>Envie seus documentos</h1>
+    <div class="white-background" *ngIf="sgqServ.sgq.attachments.length == 0">
+      <input
+        type="file"
+        class="input-attachment"
+        (change)="onUpload($event)"
+        multiple
+      />
+      <i class="pi pi-cloud-upload"></i>
+      <p>
+        Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
+      </p>
     </div>
+    <div
+      class="white-background-files"
+      *ngIf="sgqServ.sgq.attachments.length != 0"
+    >
+      <button type="button" (click)="clearFiles()" class="btn btn-light">
+        <i class="pi pi-replay"></i>
+      </button>
+      <p *ngFor="let files of sgqServ.sgq.attachments">
+        {{ files.name }}
+      </p>
+    </div>
+  </div>
 </div>
