--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
@@ -1,90 +1,111 @@
-
 <div class="d-flex flex-lg-row flex-column justify-content-between">
-    <div class="cabecalho mt-3">
-        <h1 class="mr-3">Adicionar NC Reincidente</h1>
-        <p>Busque por NCs que reincidam a NC #{{ncCode}}</p>
-    </div>
-    <div class="d-flex justify-content-end align-items-center mb-3">
-        <button
-                pButton
-                type="button"
-                icon="bi bi-x-lg"
-                class="p-button-danger p-button-text"
-                (click)="closeDialog()"
-        ></button>
-    </div>
+  <div class="cabecalho mt-3">
+    <h1 class="mr-3">{{ "sgq.steps.step1.addReocurrence" | translate }}</h1>
+    <p>
+      {{ "sgq.steps.step1.addReocurrenceSubtitle" | translate }}{{ ncCode }}
+    </p>
+  </div>
+  <div class="d-flex justify-content-end align-items-center mb-3">
+    <button
+      pButton
+      type="button"
+      icon="bi bi-x-lg"
+      class="p-button-danger p-button-text"
+      (click)="closeDialog()"
+    ></button>
+  </div>
 </div>
 
 <div class="mt-3 p-fluid">
-    <span class="p-input-icon-left">
+  <span class="p-input-icon-left">
     <i class="pi pi-search"></i>
-    <input type="text"
-           pInputText
-           placeholder="Busque por produto, parceiro ou descrição da NC..."
-           (input)="applyFilterGlobal($event, 'contains')"
-    ></span>
+    <input
+      type="text"
+      pInputText
+      [placeholder]="
+        'sgq.steps.step1.addReocurrenceInputPlaceholder' | translate
+      "
+      (input)="applyFilterGlobal($event, 'contains')"
+  /></span>
 </div>
 <div class="cabecalho mt-3">
-    <h2 class="mr-3">
-        <i class="bi bi-card-text"></i>
-        Resultados da busca
-    </h2>
-    <p>Sinalize as NCs que são reincidentes desta NC.</p>
-    <div class="card">
-        <p-table #dt1 [value]="ncs"
-                 [(selection)]="selected"
-                 [globalFilterFields]="[
-                 'code',
-                 'description',
-                 'customer.corporate_name',
-                 'provider.corporate_name',
-                 'sector.name',
-                 'status',
-                 'emissor.username',
-                 'product.name',
-                 'product.code',
-                 'product.description'
-                  ]"
-                 [scrollable]="true"
-                 scrollHeight="50vh">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Número</th>
-                    <th>Emissor</th>
-                    <th>Tipo de NC</th>
-                    <th>Setor Afetado</th>
-                    <th>Produto</th>
-                    <th>Status</th>
-                    <th>Data de Fechamento</th>
-                    <th></th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-nc let-i="rowIndex">
-                <tr>
-                <tr>
-                    <td>{{ nc.code }}</td>
-                    <td>{{ nc.emissor.username }}</td>
-                    <td>{{ nc.tipos_nc_item }}</td>
-                    <td>{{ nc.tipos_local_item }}</td>
-                    <td>{{ nc.product?.name || nc.product?.description }}</td>
+  <h2 class="mr-3">
+    <i class="bi bi-card-text"></i>
+    {{ "sgq.steps.step1.searchResults" | translate }}
+  </h2>
+  <p>{{ "sgq.steps.step1.searchResultsLabel" | translate }}</p>
+  <div class="card">
+    <p-table
+      #dt1
+      [value]="ncs"
+      [(selection)]="selected"
+      [globalFilterFields]="[
+        'code',
+        'description',
+        'customer.corporate_name',
+        'provider.corporate_name',
+        'sector.name',
+        'status',
+        'emissor.username',
+        'product.name',
+        'product.code',
+        'product.description'
+      ]"
+      [scrollable]="true"
+      scrollHeight="50vh"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>{{ "global.number" | translate }}</th>
+          <th>{{ "newNC.review.issuer" | translate }}</th>
+          <th>{{ "about.sgqEvalComponent.recurrence.type" | translate }}</th>
+          <th>{{ "about.sgqEvalComponent.recurrence.sector" | translate }}</th>
+          <th>{{ "about.sgqEvalComponent.recurrence.product" | translate }}</th>
+          <th>{{ "global.status" | translate }}</th>
+          <th>{{ "about.sgqEvalComponent.deadline" | translate }}</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-nc let-i="rowIndex">
+        <tr></tr>
+        <tr>
+          <td>{{ nc.code }}</td>
+          <td>{{ nc.emissor.username }}</td>
+          <td>{{ nc.tipos_nc_item }}</td>
+          <td>{{ nc.tipos_local_item }}</td>
+          <td>{{ nc.product?.name || nc.product?.description }}</td>
 
-                    <td>
-                    <span [ngSwitch]="nc.status" >
-                        <span *ngSwitchCase="'open'"> Em elaboração</span>
-            <span *ngSwitchCase="'running'"> Em execução</span>
-            <span *ngSwitchCase="'late'"> Atrasada</span>
-            <span *ngSwitchCase="'deleted'"> Deletada</span>
-            <span *ngSwitchCase="'archived'"> Arquivada</span>
-            <span *ngSwitchCase="'canceled'"> Cancelada</span>
-            <span *ngSwitchCase="'closed'"> Fechada</span>
-                    </span>
-                    </td>
-                    <td>{{ parseDate(nc.data_fechamento||"")||"00/00/0000" }}</td>
-                    <td>
-                        <p-tableCheckbox [value]="nc"></p-tableCheckbox>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
-    </div>
+          <td>
+            <span [ngSwitch]="nc.status">
+              <span *ngSwitchCase="'open'">
+                {{ "global.status1" | translate }}</span
+              >
+              <span *ngSwitchCase="'running'">{{
+                "global.status2" | translate
+              }}</span>
+              <span *ngSwitchCase="'late'">
+                {{ "global.status3" | translate }}</span
+              >
+              <span *ngSwitchCase="'deleted'">
+                {{ "global.status4" | translate }}</span
+              >
+              <span *ngSwitchCase="'archived'">
+                {{ "global.status5" | translate }}</span
+              >
+              <span *ngSwitchCase="'canceled'">
+                {{ "global.status6" | translate }}</span
+              >
+              <span *ngSwitchCase="'closed'">
+                {{ "global.status7" | translate }}</span
+              >
+            </span>
+          </td>
+          <td>{{ parseDate(nc.data_fechamento || "") || "00/00/0000" }}</td>
+          <td>
+            <p-tableCheckbox [value]="nc"></p-tableCheckbox>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
