--- a/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
+++ b/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
@@ -6,7 +6,7 @@
     class="d-flex justify-content-center align-items-center"
     style="width: 100%"
   >
-    <h2>Número de Ncs x Custo Total</h2>
+    <h2>{{'charts.title1'| translate}}</h2>
   </div>
   <div
     class="d-flex justify-content-center align-items-center"
