--- a/src/app/pages/dashboards/charts/nc-year/nc-year.component.html
+++ b/src/app/pages/dashboards/charts/nc-year/nc-year.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex flex-column align-items-center">
-  <div><h2>Número de Ncs x Custo Total</h2></div>
+  <div><h2>{{'charts.title10' | translate}}</h2></div>
   <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
 </div>
