--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -36,7 +36,7 @@
 
   
   <div class="col-3 col-attachment">
-    <label>{{'global.fileInput.title'| translate}} *</label>
+    <label>{{'global.fileInput.title'| translate}} {{isRequired()}}</label>
     <app-attach [item]="'evidenciasNc'"></app-attach>
   </div>
 </div>
