correcao nos graficos e responsividade

--- a/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
+++ b/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
@@ -11,6 +11,6 @@
   </div>
 
   
-    <plotly-plot [data]="graph.data" [layout]="graph.layout" [useResizeHandler]="true" [style]="{position: 'relative', width: '1200px', height: '500px'}"> </plotly-plot>
+    <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
   
 </div>
