--- a/src/app/pages/dashboards/charts/nc-receptor-emissor/nc-receptor-emissor.component.html
+++ b/src/app/pages/dashboards/charts/nc-receptor-emissor/nc-receptor-emissor.component.html
@@ -10,5 +10,5 @@
     ></p-dropdown>
   </div>
 
-  <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
+  <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"> </plotly-plot>
 </div>
