--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,9 +1,10 @@
 <div
-  class="d-flex flex-column justify-content-center align-items-center"
+  class="d-flex flex-column justify-content-around align-items-center"
+  style="height: 7200px;"
   *ngIf="carregou()"
 >
-
-<!-- 1 - (nc-status)
+<!-- 
+1 - (nc-status)
 2 - (nc-year)
 3 - (cost-sector)
 4 - (nc-products)
@@ -12,16 +13,17 @@
 7 - (nc-receptor)
 8 - (nc-receptor-emissor)
 9 - (nc-count) 
-10 - (nc-actionplan) -->
+10 - (nc-actionplan) 
+-->
 
-  <app-nc-receptor-emissor [size]="[1600, 400]"></app-nc-receptor-emissor>
-  <app-nc-status [size]="[1600, 400]"></app-nc-status>
-  <app-nc-year [size]="[1600, 400]"></app-nc-year>
-  <app-nc-types [size]="[1600, 400]"></app-nc-types>
-  <app-nc-emissor [size]="[1600, 400]"></app-nc-emissor>
-  <app-nc-receptor [size]="[1600, 400]"></app-nc-receptor>
-  <app-cost-sector [size]="[1600, 400]"></app-cost-sector>
-  <app-nc-count [size]="[1600, 400]"></app-nc-count> 
-  <app-nc-actionplan [size]="[1600, 400]"></app-nc-actionplan>
-  <app-nc-products [size]="[1600, 400]"></app-nc-products>
+  <app-nc-receptor-emissor [size]="[getWidth(), 400]"></app-nc-receptor-emissor>
+  <app-nc-status [size]="[getWidth(), 400]"></app-nc-status>
+  <app-nc-year [size]="[getWidth(), 400]"></app-nc-year>
+  <app-nc-types [size]="[getWidth(), 400]"></app-nc-types>
+  <app-nc-emissor [size]="[getWidth(), 400]"></app-nc-emissor>
+  <app-nc-receptor [size]="[getWidth(), 400]"></app-nc-receptor>
+  <app-cost-sector [size]="[getWidth(), 400]"></app-cost-sector>
+  <app-nc-count [size]="[getWidth(), 400]"></app-nc-count>
+  <app-nc-actionplan [size]="[getWidth(), 400]"></app-nc-actionplan>
+  <app-nc-products [size]="[getWidth(), 400]"></app-nc-products>
 </div>
